syntax = "proto3";

package greeter;

import "validate/validate.proto";

service Greeter {
    rpc SayHello (HelloRequest) returns (stream HelloResponse) {}
}

message HelloRequest {
    string name = 1 [(validate.rules).string.min_len = 3];
    int32 times = 2 [(validate.rules).int32 = {gt: 3, lte: 10}];
}

message HelloResponse {
    string message = 1;
}